Implementando mudancas no layout

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,6 +9,7 @@
 
     <!-- button strings -->
     <string name="splash_btn_ok">Avançar</string>
+    <string name="main_menu_btn_choose_cases">Casos disponíveis</string>
 
     <!-- everything else -->
     <string name="app_name">tcc</string>
